--- a/products/ee-female-ring-black-rhodium.html
+++ b/products/ee-female-ring-black-rhodium.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>EE female ring — gold · EDELHART</title>
-  <meta name="description" content="EE female ring in gold — elegant gold finish with the signature EE profile. Comfortable taper for daily wear." />
+  <title>EE female ring — black rhodium · EDELHART</title>
+  <meta name="description" content="EE female ring — black rhodium — bold dark finish. Signature design for everyday elegance." />
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
           <div class="drop-menu" role="menu">
             <a href="../collections/sss.html" role="menuitem">SSS</a>
             <a href="../collections/whispering-a.html" role="menuitem">Whispering A</a>
-            <a href="../collections/the-core.html" role="menuitem">The Core</a>
+            <a href="../collections/ECHO.html" role="menuitem">ECHO</a>
           </div>
         </div>
         <span class="sep">·</span>
@@ -45,50 +45,54 @@
         <a href="../index.html#about">About</a>
       </div>
 
-      <button class="cart-toggle" type="button" aria-label="Open cart">
-        Cart <span class="cart-count" aria-hidden="true">0</span>
-      </button>
+      <div class="nav-utilities" aria-label="Cart and currency">
+        <button class="cart-toggle" type="button" aria-label="Open cart">
+          Cart <span class="cart-count" aria-hidden="true">0</span>
+        </button>
+        <select class="currency-select" data-role="currency-select" aria-label="Select currency">
+          <option value="VND">VND</option>
+          <option value="USD">USD</option>
+          <option value="EUR">EUR</option>
+        </select>
+      </div>
     </nav>
   </div>
 </header>
 
-<main class="product-page" aria-label="Product page">
+<main class="product-page" aria-label="Product page" data-product-slug="ee-female-ring-BR">
   <div class="wrap">
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <a href="../index.html#collections">Collections</a>
-      <a href="../collections/the-core.html">The Core</a>
-      <span aria-current="page">EE female ring — gold</span>
+      <a href="../collections/ECHO.html">ECHO</a>
+      <span aria-current="page">EE female ring — black rhodium</span>
     </nav>
 
     <a class="page-back" href="../index.html#products" aria-label="Back to catalog">Back to catalog</a>
 
     <div class="product">
-      <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/EE-female-ring-gold/EE-female-ring-gold-1.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-2.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-3.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-4.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-5.jpeg">
+        <div class="product-gallery" data-images="../img/products/EE-female-ring-BR/EE-female-ring-BR-1.jpeg,../img/products/EE-female-ring-BR/EE-female-ring-BR-2.jpeg,../img/products/EE-female-ring-BR/EE-female-ring-BR-3.jpeg,../img/products/EE-female-ring-BR/EE-female-ring-BR-4.jpeg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
           <div class="thumbs"></div>
         </div>
-        <!-- Thumbnail strip below gallery -->
         <div class="thumb-strip">
           <div class="thumb-row"></div>
         </div>
       </div>
 
-      <!-- RIGHT: Checkout -->
       <aside class="checkout">
-        <div class="title">EE female ring — gold</div>
-        <div class="price">$140</div>
+        <div class="title">EE female ring — black rhodium</div>
+        <div class="price" data-price-vnd="1400000">₫1,400,000</div>
 
-        <form data-product="EE female ring">
+        <form data-product="EE female ring — black rhodium">
           <div>
             <label for="metal">Metal</label>
             <select id="metal" name="metal">
-              <option>14K Gold</option>
-              <option>E-Silver</option>
               <option>Black Rhodium</option>
+              <option>E-Silver</option>
+              <option>14K Gold</option>
             </select>
           </div>
 
@@ -125,7 +129,7 @@
 
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
-            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20EE%20female%20ring%20%E2%80%94%20gold."
+            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20EE%20female%20ring%20%E2%80%94%20black%20rhodium."
                class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
               <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
                 <path d="M12 2a10 10 0 00-8 16.1L3 22l3.9-1A10 10 0 1012 2zm5.2 14.2c-.2.6-1.2 1.1-1.7 1.1-.5 0-1 .2-3.3-1.1-2.8-1.6-4.5-4.6-4.6-4.8-.2-.3-1.1-1.5-1.1-2.8 0-1.2.6-1.8.9-2 .3-.2.8-.3 1-.3h.7c.2 0 .5 0 .7.6.3.7 1 2.4 1 2.5s.1.4 0 .6c-.1.2-.2.3-.4.5-.2.2-.4.5-.6.6-.2.2-.4.4-.2.7.2.3.9 1.5 2.1 2.4 1.5 1.1 2.7 1.5 3.1 1.7.3.1.6.1.8 0 .2-.1 1.3-.6 1.5-.8.2-.1.4-.2.7-.1.2.1 1.1.5 1.3.6.2.1.3.1.4.2.1 0 .1.6-.1 1.1z"/>
@@ -136,13 +140,13 @@
               <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
                 <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6-1a1 1 0 100 2 1 1 0 000-2zm-6 3a3 3 0 110 6 3 3 0 010-6z"/>
               </svg>
-              Copy for Instagram
+              Copy cart & Inquire on Instagram
             </button>
             <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook" title="Copy order details for Facebook">
               <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
                 <path d="M22 12a10 10 0 10-11.6 9.9v-7h-2.3V12h2.3V9.7c0-2.3 1.4-3.6 3.5-3.6 1 0 2 .2 2 .2v2.2H15c-1.1 0-1.5.7-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0022 12z"/>
               </svg>
-              Copy for Facebook
+              Copy cart & Inquire on Facebook
             </button>
             <a href="https://maps.google.com/?q=483/11+Le+Van+Sy+Street,+Ward+Nhieu+Loc,+Ho+Chi+Minh+City,+Vietnam"
                class="btn outline" target="_blank" rel="noopener noreferrer" aria-label="Find us on Google Maps" title="Find us on Google Maps">
@@ -154,26 +158,19 @@
           </div>
         </form>
 
-        <p class="meta">Should you desire a rendition of this design in alternative materials or hues, or seek a bespoke creation tailored exclusively for you, crafted with the finest metals and adorned with exquisite stones, please contact us directly.</p>
+        <p class="meta">Should you desire a rendition of this design in alternative materials or hues—or a bespoke creation tailored exclusively for you—please contact us directly.</p>
       </aside>
     </div>
 
-    <!-- CRITICAL: Wrapper prevents overlap -->
     <div class="product-page-content">
-      <!-- Product Description -->
       <div class="product-description">
         <h3>About This Piece</h3>
-        <p>
-          The EE female ring embodies our signature aesthetic — refined minimalism with a statement edge.
-          Crafted in gold with elegant finish and the signature EE profile, this piece features comfortable taper for daily wear.
-          Each ring is hand-finished to ensure exceptional quality and lasting beauty.
-        </p>
+        <p>The EE female ring embodies our signature aesthetic — refined minimalism with a statement edge. Crafted in black rhodium with bold dark finish, this piece features signature design for everyday elegance. Each ring is hand-finished to ensure exceptional quality and lasting beauty.</p>
       </div>
 
-      <!-- On-Body Gallery -->
-      <section aria-label="On‑Body Gallery">
+      <section aria-label="Catalogue">
         <div class="section-head">
-          <h2>On‑Body Gallery</h2>
+          <h2>Catalogue</h2>
           <p>See how it sits on body and pairs with other pieces.</p>
         </div>
 
@@ -210,23 +207,18 @@
         </div>
       </section>
 
-      <!-- You may also like -->
       <section aria-label="You may also like">
         <div class="section-head">
           <h2>You may also like</h2>
           <p>Pair it with complementary pieces.</p>
         </div>
         <div class="related-strip" id="dynamic-related">
-          <div class="related-track" data-auto="true">
-            <!-- Dynamically populated by JS -->
-          </div>
+          <div class="related-track" data-auto="true"></div>
           <div class="swipe-indicator" aria-hidden="true"><div class="thumb"></div></div>
         </div>
       </section>
     </div>
   </div>
-
-  <!-- Lightbox root injected by JS when opened -->
 </main>
 
 <footer>
@@ -236,7 +228,6 @@
   </div>
 </footer>
 
-<!-- Cart drawer -->
 <div class="cart-drawer" aria-hidden="true">
   <div class="cart-overlay"></div>
   <aside class="cart-panel" role="dialog" aria-modal="true" aria-label="Cart">
@@ -251,21 +242,21 @@
     <footer class="cart-footer">
       <div class="cart-summary">
         <span>Total</span>
-        <span class="cart-total">$0</span>
+        <span class="cart-total" data-price-vnd="1400000">₫1,400,000</span>
       </div>
       <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
         Send order via WhatsApp
       </a>
-      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy for Instagram</button>
-      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy for Facebook</button>
+      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy cart & Inquire on Instagram</button>
+      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy cart & Inquire on Facebook</button>
     </footer>
   </aside>
 </div>
 
-<!-- Back to top -->
 <button id="back-to-top" aria-label="Back to top">↑</button>
 
 <script src="../js/products-data.js" defer></script>
+<script src="../js/currency-manager.js" defer></script>
 <script src="../js/app.js" defer></script>
 </body>
 </html>
