--- a/products/ring-blue-gem.html
+++ b/products/ring-blue-gem.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Blue gemstone ring · EDELHART</title>
-  <meta name="description" content="Blue gemstone ring — sculpted band with blue gem. Unique design for statement wear." />
+  <title>FOTO ring · EDELHART</title>
+  <meta name="description" content="FOTO ring — sculpted band with blue gem. Unique design for statement wear." />
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
           <div class="drop-menu" role="menu">
             <a href="../collections/sss.html" role="menuitem">SSS</a>
             <a href="../collections/whispering-a.html" role="menuitem">Whispering A</a>
-            <a href="../collections/the-core.html" role="menuitem">The Core</a>
+            <a href="../collections/ECHO.html" role="menuitem">ECHO</a>
           </div>
         </div>
         <span class="sep">·</span>
@@ -45,9 +45,15 @@
         <a href="../index.html#about">About</a>
       </div>
 
-      <button class="cart-toggle" type="button" aria-label="Open cart">
-        Cart <span class="cart-count" aria-hidden="true">0</span>
-      </button>
+      <div class="nav-utilities" aria-label="Cart and currency">
+        <button class="cart-toggle" type="button" aria-label="Open cart">
+          Cart <span class="cart-count" aria-hidden="true">0</span>
+        </button>
+        <select class="currency-select" data-role="currency-select" aria-label="Select currency">
+          <option value="VND">VND</option>
+          <option value="USD">USD</option>
+          <option value="EUR">EUR</option>
+        </select>
     </nav>
   </div>
 </header>
@@ -57,7 +63,7 @@
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <a href="../index.html#collections">Collections</a>
       <a href="../collections/whispering-a.html">Whispering A</a>
-      <span aria-current="page">Blue gemstone ring</span>
+      <span aria-current="page">FOTO ring</span>
     </nav>
 
     <a class="page-back" href="../index.html#products" aria-label="Back to catalog">Back to catalog</a>
@@ -79,10 +85,10 @@
 
       <!-- RIGHT: Checkout -->
       <aside class="checkout">
-        <div class="title">Blue gemstone ring</div>
+        <div class="title">FOTO ring</div>
         <div class="price">$0</div>
 
-        <form data-product="Blue gemstone ring">
+        <form data-product="FOTO ring">
           <div>
             <label for="metal">Metal</label>
             <select id="metal" name="metal">
@@ -136,13 +142,13 @@
               <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
                 <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6-1a1 1 0 100 2 1 1 0 000-2zm-6 3a3 3 0 110 6 3 3 0 010-6z"/>
               </svg>
-              Copy for Instagram
+              Copy cart & Inquire on Instagram
             </button>
             <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook" title="Copy order details for Facebook">
               <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
                 <path d="M22 12a10 10 0 10-11.6 9.9v-7h-2.3V12h2.3V9.7c0-2.3 1.4-3.6 3.5-3.6 1 0 2 .2 2 .2v2.2H15c-1.1 0-1.5.7-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0022 12z"/>
               </svg>
-              Copy for Facebook
+              Copy cart & Inquire on Facebook
             </button>
             <a href="https://maps.google.com/?q=483/11+Le+Van+Sy+Street,+Ward+Nhieu+Loc,+Ho+Chi+Minh+City,+Vietnam"
                class="btn outline" target="_blank" rel="noopener noreferrer" aria-label="Find us on Google Maps" title="Find us on Google Maps">
@@ -164,16 +170,16 @@
       <div class="product-description">
         <h3>About This Piece</h3>
         <p>
-          The Blue gemstone ring embodies our signature aesthetic — refined minimalism with a statement edge.
+          The FOTO ring embodies our signature aesthetic — refined minimalism with a statement edge.
           Crafted with sculpted band with blue gem, this piece is unique for statement wear.
           Each ring is hand-finished to ensure exceptional quality and lasting beauty.
         </p>
       </div>
 
-      <!-- On-Body Gallery -->
-      <section aria-label="On‑Body Gallery">
+      <!-- Catalogue -->
+      <section aria-label="Catalogue">
         <div class="section-head">
-          <h2>On‑Body Gallery</h2>
+          <h2>Catalogue</h2>
           <p>See how it sits on body and pairs with other pieces.</p>
         </div>
 
@@ -256,8 +262,8 @@
       <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
         Send order via WhatsApp
       </a>
-      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy for Instagram</button>
-      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy for Facebook</button>
+      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy cart & Inquire on Instagram</button>
+      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy cart & Inquire on Facebook</button>
     </footer>
   </aside>
 </div>
